--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- icon link code past -->
     <script src="https://kit.fontawesome.com/8f04ba0d30.js" crossorigin="anonymous"></script>
-
+    <!-- Faviconi -->
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <!-- style link -->
     <link rel="stylesheet" href="style.css">
     <title>Responsive-web-site</title>
@@ -197,10 +204,59 @@
                     <h4>Lorem, ipsum dolor.</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo pariatur corrupti, ratione quisquam veniam exercitationem. Fugit similique saepe architecto ducimus in!</p>
                 </fieldset>
-
             </div>
         </section>
 
+        <!-- 7rd section code suru -->
+        <section>
+            <div id="text-img">
+                <div class="photo-compure">
+                    <h2>Lorem ipsum dolor sit amet.</h2>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas ad vero tempore soluta harum molestiae in praesentium possimus nulla molestias?
+                    </p>
+                    <ul>
+                        <li><a href="#">Html five</a></li>
+                        <li><a href="#">Css</a></li>
+                        <li><a href="#">JaVajs</a></li>
+                        <li><a href="#">Web-Devlopr</a></li>
+                        <li><a href="#">Web-Digine</a></li>
+                        <li><a href="#">Whatpess</a></li>
+                    </ul>
+                </div>
+                <div class="photo-compure-img">
+                    <img src="img/computer.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <div id="footer-prent">
+            <div class="footer-div">
+                <h3>Lorem ipsum dolor</h3>
+                <p>Lorem ipsum dolor sit amet consectetur,sdfsf adipisicing elit. Possimus commodi omnis voluptatem enderit voluptatum consequuntur adipisci debitis mollitia nihil optio!</p>
+            </div>
+            <div class="footer-div">
+                <h3>Lorem, ipsum</h3>
+                <p><a href="#"><i class="fa-solid fa-angle-right"></i>About</a></p>
+                <p><a href="#"><i class="fa-solid fa-angle-right"></i>Servises</a></p>
+                <p><a href="#"><i class="fa-solid fa-angle-right"></i>Technology</a></p>
+            </div>
+            <div class="footer-div">
+                <h3>Sosal Media</h3>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"> <i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-solid fa-location-dot"></i></a>
+                <a href="#"><i class="fa-brands fa-wordpress"></i></a>  
+            </div>
+        </div>
+        <hr>
+        <div class="text-icon">
+            <p>&#127757; Shuvo Roy Web-Devlopr &#127757;</p>
+            <p>&#128540; &#128110;</p>
+        </div>
+      
+    </footer>
 </body>
 </html>
